--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,10 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "compile": [
+          "php artisan migrate --force",
+          "php artisan storage:link"
         ]
     },
     "config": {
