--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "algolia/algoliasearch-client-php": "^1.27",
         "fideloper/proxy": "^4.0",
+        "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "5.7.*",
         "laravel/scout": "^6.1",
         "laravel/socialite": "^3.2",
